feat: Implement CRUD operations for Tag entities
- Added TagController for handling HTTP requests related to tags.
- Created TagEntity to represent the tag data model in the database.
- Introduced Tag model for data transfer between the controller and service layers.
- Developed TagRepository for database interactions with TagEntity.
- Implemented TagService to manage business logic for tag operations.
- Added unit tests for TagController and TagService to ensure functionality.
- Created necessary test classes for feature and repository entities.